--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,11 @@
                     <li class="contact-info"><a href="tel:+16478904176">647-890-4176</a></li>
                 </ul>
             </div>
+            
+        </div>
+
+        <div class="emails">
+            <h3>info@stonesvillage.net <span>|</span> stonesclinic@gmail.com</h3>
         </div>
 
         <div class="contact-form-map-container">
